# aiot-planter

./: .env.example  .gitignore  DEMO_SCRIPT.txt  README.md
.claude/: settings.json
.claude/skills/senior-backend/: SKILL.md
.claude/skills/senior-frontend/: SKILL.md
backend/: go.mod  go.sum  main.go
backend/broker/: mqtt.go
backend/database/: db.go
backend/handler/: device_handler.go  mood_handler.go  notify_handler.go  photos_handler.go  sensor_handler.go  upload_handler.go  user_handler.go
backend/middleware/: auth.go
backend/model/: mood.go  sensor.go  user.go
backend/router/: router.go
esp32/: camera_module.cpp  camera_module.h  connect_mqtt.cpp  connect_mqtt.h  connect_wifi.cpp  connect_wifi.h  env.example  esp32.ino  soil.cpp  soil.h
frontend/: dashboard.html  login.html  register.html
python/: generate_mock_data.py  logger_config.py  main.py  planter_rf_model.joblib  pyproject.toml  sensors_dataset.csv  train_model.py
